--- a/treetest/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/treetest/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -146,7 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="treestest.cpp" />
+    <ClCompile Include="minvaluetree.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
